--- a/CookingGameApp/app/src/main/res/layout/activity_menu.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_menu.xml
@@ -1,87 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/menuLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MenuActivity">
 
     <!-- Background Image -->
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/menubackground"
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
-        android:contentDescription="@null" />
+        android:src="@drawable/menubackground"
+        android:contentDescription="@null"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Main 3 Buttons in Center -->
+    <!-- Settings Button -->
+    <ImageButton
+        android:id="@+id/buttonSettings"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_margin="16dp"
+        android:background="@null"
+        android:contentDescription="Settings"
+        android:src="@drawable/settings"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Horizontal Button Row -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/buttonRow"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         android:padding="16dp"
-        android:weightSum="3">
+        android:baselineAligned="false"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Create Room -->
         <FrameLayout
-            android:layout_width="200dp"
-            android:layout_height="300dp"
-            android:layout_weight="1">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="8dp">
 
             <ImageButton
                 android:id="@+id/buttonCreateRoom"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
                 android:src="@drawable/createroom"
-                android:scaleType="fitXY"
                 android:background="@null"
                 android:contentDescription="Create Room" />
         </FrameLayout>
 
         <!-- Join -->
         <FrameLayout
-            android:layout_width="200dp"
-            android:layout_height="300dp"
-            android:layout_weight="1">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="8dp">
 
             <ImageButton
                 android:id="@+id/buttonJoin"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
                 android:src="@drawable/join"
-                android:scaleType="fitXY"
                 android:background="@null"
                 android:contentDescription="Join" />
         </FrameLayout>
 
         <!-- Instruction -->
         <FrameLayout
-            android:layout_width="200dp"
-            android:layout_height="300dp"
-            android:layout_weight="1">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_margin="8dp">
 
             <ImageButton
                 android:id="@+id/buttonInstruction"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
                 android:src="@drawable/instruction"
-                android:scaleType="fitXY"
                 android:background="@null"
                 android:contentDescription="Instructions" />
-
         </FrameLayout>
-
     </LinearLayout>
-    <!-- Settings Button at Top Right -->
-    <ImageButton
-        android:id="@+id/buttonSettings"
-        android:layout_width="wrap_content"
-        android:layout_height="64dp"
-        android:layout_gravity="top|end"
-        android:layout_margin="16dp"
-        android:background="@null"
-        android:contentDescription="Settings"
-        android:src="@drawable/settings" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
