--- a/CookingGameApp/app/src/main/res/layout/activity_select_difficulty.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_select_difficulty.xml
@@ -1,74 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SelectDifficultyActivity">
 
-    <!-- Fullscreen Background -->
+    <!-- Background -->
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/menubackground"
+        android:id="@+id/backgroundImage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:scaleType="centerCrop"
-        android:contentDescription="@null" />
+        android:src="@drawable/menubackground"
+        android:contentDescription="@null"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Centered Difficulty Buttons -->
+    <!-- Button Row -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/difficultyButtonRow"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
-        android:padding="16dp"
-        android:weightSum="3">
+        android:weightSum="3"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
 
         <!-- Easy Button -->
-        <FrameLayout
-            android:layout_width="200dp"
-            android:layout_height="300dp"
-            android:layout_weight="1">
-
-            <ImageButton
-                android:id="@+id/easyButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/easy"
-                android:scaleType="fitCenter"
-                android:background="@null"
-                android:contentDescription="Easy" />
-        </FrameLayout>
+        <ImageButton
+            android:id="@+id/easyButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:maxHeight="300dp"
+            android:src="@drawable/easy"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:contentDescription="Easy"
+            android:layout_margin="4dp" />
 
         <!-- Medium Button -->
-        <FrameLayout
-            android:layout_width="200dp"
-            android:layout_height="300dp"
-            android:layout_weight="1">
-
-            <ImageButton
-                android:id="@+id/mediumButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/medium"
-                android:scaleType="fitCenter"
-                android:background="@null"
-                android:contentDescription="Medium" />
-        </FrameLayout>
+        <ImageButton
+            android:id="@+id/mediumButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:maxHeight="300dp"
+            android:src="@drawable/medium"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:contentDescription="Medium"
+            android:layout_margin="4dp" />
 
         <!-- Hard Button -->
-        <FrameLayout
-            android:layout_width="200dp"
-            android:layout_height="300dp"
-            android:layout_weight="1">
-
-            <ImageButton
-                android:id="@+id/hardButton"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/hard"
-                android:scaleType="fitCenter"
-                android:background="@null"
-                android:contentDescription="Hard" />
-        </FrameLayout>
+        <ImageButton
+            android:id="@+id/hardButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:adjustViewBounds="true"
+            android:maxHeight="300dp"
+            android:src="@drawable/hard"
+            android:scaleType="fitCenter"
+            android:background="@null"
+            android:contentDescription="Hard"
+            android:layout_margin="4dp" />
     </LinearLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
