--- a/CookingGameApp/app/src/main/res/layout/activity_animation.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_animation.xml
@@ -5,22 +5,22 @@
     android:id="@+id/startPageLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/hostbackground">
+    android:background="@drawable/anime_background">
 
     <!-- Food Images and Center Character -->
 
     <TextView
         android:id="@+id/titleText"
-        android:layout_width="280dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="68dp"
+        android:layout_width="349dp"
+        android:layout_height="76dp"
+        android:layout_marginTop="52dp"
         android:fontFamily="@font/baloo_regular"
         android:text="@string/animation_heading"
-        android:textColor="#F44336"
-        android:textSize="50sp"
+        android:textColor="#40a829"
+        android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.43"
+        app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -60,10 +60,10 @@
 
     <ImageView
         android:id="@+id/imageBreakfast"
-        android:layout_width="98dp"
-        android:layout_height="91dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginEnd="72dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="100dp"
         android:src="@drawable/breakfast"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -92,8 +92,8 @@
 
     <ImageView
         android:id="@+id/imageDish"
-        android:layout_width="90dp"
-        android:layout_height="93dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="64dp"
         android:src="@drawable/dish"
@@ -108,8 +108,8 @@
         android:id="@+id/imageSalad"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="128dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="68dp"
         android:src="@drawable/salad"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageDinner" />
