--- a/CookingGameApp/app/src/main/res/layout/activity_instruction.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_instruction.xml
@@ -5,19 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FEDEB7"
-    tools:context=".MainActivity">
+    tools:context=".InstructionActivity">
 
-    <!-- Optional: Guideline to control content height -->
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guidelineTop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.33" />
-
-    <!-- Recipe Board Background -->
     <ImageView
-        android:id="@+id/centerImage"
+        android:id="@+id/recipeBoard"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:src="@drawable/recipebackground"
@@ -30,42 +21,23 @@
         app:layout_constraintWidth_percent="1"
         app:layout_constraintHeight_percent="0.8" />
 
-    <!-- Title: How to Play? -->
-    <TextView
-        android:id="@+id/subtitleText"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/instructionContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="How to Play?"
-        android:textColor="#F75526"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:fontFamily="@font/baloo"
-        app:layout_constraintTop_toBottomOf="@id/guidelineTop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/recipeBoard"
+        app:layout_constraintBottom_toBottomOf="@id/recipeBoard"
+        app:layout_constraintStart_toStartOf="@id/recipeBoard"
+        app:layout_constraintEnd_toEndOf="@id/recipeBoard"
+        app:layout_constraintVertical_bias="0.6">
 
-    <!-- Instructions -->
-    <TextView
-        android:id="@+id/instructionText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1. Host player creates a room\n2. Other players enter the game code\n3. Host player starts the game\n4. Play together and have fun!"
-        android:textColor="#9D5A40"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:fontFamily="@font/baloo"
-        android:lineSpacingExtra="4dp"
-        app:layout_constraintTop_toBottomOf="@id/subtitleText"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        <include layout="@layout/reusable_instruction_block" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Back Button -->
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="200dp"
-        android:layout_height="110dp"
+        android:layout_width="120dp"
+        android:layout_height="60dp"
         android:background="@null"
         android:src="@drawable/back"
         android:scaleType="fitCenter"
