fix the recipe inconsistently loaded issues

--- a/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
@@ -42,6 +42,13 @@
         android:src="@drawable/avocado"
         android:contentDescription="Avocado" />
 
+<!--    <ImageView-->
+<!--        android:id="@+id/avocadoSlide"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:src="@drawable/avocado"-->
+<!--        android:contentDescription="Avocado" />-->
+
     <ImageView
         android:id="@+id/imageChicken"
         android:layout_width="80dp"
@@ -115,6 +122,13 @@
         android:layout_height="100dp"
         android:src="@drawable/lemon"
         android:contentDescription="Lemon" />
+
+<!--    <ImageView-->
+<!--        android:id="@+id/lemonslide"-->
+<!--        android:layout_width="100dp"-->
+<!--        android:layout_height="100dp"-->
+<!--        android:src="@drawable/lemonslide"-->
+<!--        android:contentDescription="Lemon Slide" />-->
 
     <ImageView
         android:id="@+id/imageStove"
