pot invisible bug is fixed

--- a/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
+++ b/CookingGameApp/app/src/main/res/layout/activity_playgame.xml
@@ -70,16 +70,19 @@
     <!-- Pot Container -->
     <FrameLayout
         android:id="@+id/potContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="100dp">
 
         <ImageView
             android:id="@+id/imagePot"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:src="@drawable/pot"
-            android:layout_gravity="center" />
+            android:contentDescription="Pot" />
 
         <ImageView
             android:id="@+id/imageRedFill"
